cleanup, refactoring, upgrades to jdk11