@@ -10,7 +10,6 @@ import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
 import java.io.IOException;
 import java.io.ObjectInputStream;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -22,7 +21,7 @@ public class CachedDistance<T> implements Distance<T> {
   private transient LoadingCache<List<T>, Double> cache;
   private final Distance<T> distance;
 
-  private static final int CACHE_SIZE = 10000;
+  private static final int CACHE_SIZE = 16*1024;
 
   public CachedDistance(Distance<T> distance) {
     this.distance = distance;
@@ -31,15 +30,17 @@ public class CachedDistance<T> implements Distance<T> {
 
   @Override
   public double d(T t1, T t2) {
-    return cache.getUnchecked(Arrays.asList(t1, t2));
+    return cache.getUnchecked(List.of(t1, t2));
   }
 
   private void buildCache() {
-    cache = CacheBuilder.newBuilder().maximumSize(CACHE_SIZE).build(new CacheLoader<List<T>, Double>() {
+    cache = CacheBuilder.newBuilder().maximumSize(CACHE_SIZE).build(new CacheLoader<>() {
       @Override
-      public Double load(List<T> ts) throws Exception {
-        double d = distance.d(ts.get(0), ts.get(1));
-        cache.put(Arrays.asList(ts.get(1), ts.get(0)), d); //put pair in the other order
+      public Double load(List<T> ts) {
+        T a = ts.get(0);
+        T b = ts.get(1);
+        double d = distance.d(a, b);
+        cache.put(List.of(b, a), d); //put pair in the other order
         return d;
       }
     });
